added links in html, changed pic in assets

--- a/index.html
+++ b/index.html
@@ -218,14 +218,14 @@
         <h2 class="experience-sub-title project-title">NBA Hangman</h2>
         <div class="btn-container">
           <a 
-            href="https://github.com/" 
+            href="https://github.com/kanetobey/NBA-Hangman" 
             target="_blank" 
             class="btn btn-color-2 project-btn"
           >
             Github
           </a>
           <a 
-            href="https://github.com/" 
+            href="https://nbahangman.netlify.app/" 
             target="_blank" 
             class="btn btn-color-2 project-btn"
           >
@@ -244,14 +244,14 @@
         <h2 class="experience-sub-title project-title">QR Code Generator</h2>
         <div class="btn-container">
           <a 
-            href="https://github.com/" 
+            href="https://github.com/kanetobey/QR-Code-Generator" 
             target="_blank" 
             class="btn btn-color-2 project-btn"
           >
             Github
           </a>
           <a 
-            href="https://github.com/" 
+            href="https://qr-code-makr.netlify.app/" 
             target="_blank" 
             class="btn btn-color-2 project-btn"
           >
@@ -278,7 +278,7 @@
             alt="Email icon" 
             class="icon contact-icon email-icon"
             >
-            <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a>
+            <p><a href="mailto:kanetobey@gmail.com">kanetobey@gmail.com</a>
             </p>
         </div>
         <div class="contact-info-container">
